--- a/services.html
+++ b/services.html
@@ -225,8 +225,8 @@
                                                         <img src="assets/img/service/servicess6.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
-                                                        <a href="servises/family-law.html" class="plus-btn"><i class="fas fa-users"></i></a>
-                                                        <h4><a href="servises/family-law.html" data-key="service8">FAMILY LAW</a></h4>
+                                                        <a href="servises/familly-law.html" class="plus-btn"><i class="fas fa-users"></i></a>
+                                                        <h4><a href="servises/familly-law.html" data-key="service8">FAMILY LAW</a></h4>
                                                     </div>
                                                 </div>
                                             </div>
@@ -323,8 +323,8 @@
                                                         <img src="assets/img/service/servicess6.jpg" alt="">
                                                     </div>
                                                     <div class="project-cap">
-                                                        <a href="servises/family-law.html" class="plus-btn"><i class="fas fa-users"></i></a>
-                                                        <h4><a href="servises/family-law.html" data-key="service8">FAMILY LAW</a></h4>
+                                                        <a href="servises/familly-law.html" class="plus-btn"><i class="fas fa-users"></i></a>
+                                                        <h4><a href="servises/familly-law.html" data-key="service8">FAMILY LAW</a></h4>
                                                     </div>
                                                 </div>
                                             </div>
