--- a/servises/corporate-law.html
+++ b/servises/corporate-law.html
@@ -49,9 +49,9 @@
                             <div class="col-xl-2 col-lg-2 col-md-1">
                                 <div class="logo">
                                     <!-- logo-1 -->
-                                    <a href="index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
+                                     <a href="../index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
                                     <!-- logo-2 -->
-                                    <a href="index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
+                                    <a href="../index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8">
@@ -69,9 +69,9 @@
                                             <li class="dropdown">
                                                 <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
                                                 <div class="dropdown-content">
-                                                    <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
-                                                    <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
-                                                    <a href="#" onclick="changeLanguage('ar')"><img src="./assets/img/icon/ar.png" alt="العربية"> Arab</a>
+                                                    <a href="#" onclick="changeLanguage('en')"><img src="../assets/img/icon/uk.png" alt="English"> Eng</a>
+                                                    <a href="#" onclick="changeLanguage('fr')"><img src="../assets/img/icon/fr.png" alt="Français"> Fra</a>
+                                                    <a href="#" onclick="changeLanguage('ar')"><img src="../assets/img/icon/ar.png" alt="العربية"> Arab</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -92,16 +92,16 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess2.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess10.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap pt-100">
-                                <h2>COMPANIES LAW</h2>
+                                <h2 data-key="service9">CORPORATE LAW</h2>
                                 <nav aria-label="breadcrumb ">
                                     <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="../services.html">Services</a></li> 
+                                        <li class="breadcrumb-item"><a href="../index.html" data-key="nav-home">Home</a></li>
+                                        <li class="breadcrumb-item"><a href="../services.html" data-key="nav-services">Services</a></li> 
                                     </ol>
                                 </nav>
                             </div>
@@ -118,27 +118,24 @@
             <div class="col-12">
                 <div class="single-services section-padding2">
                     <div class="details-caption">
-                        <h3>Corporate Law</h3>
-                        <p class="mb-50">Our corporate law services in the UAE are designed to support businesses at every stage of their lifecycle, from incorporation to corporate governance, mergers, and acquisitions. We provide expert legal counsel in structuring and managing businesses to ensure compliance with UAE laws and regulations. Whether you’re starting a new business, restructuring an existing one, or facing complex corporate disputes, our experienced team of corporate lawyers is here to guide you through every legal challenge, ensuring your business operates smoothly and efficiently.</p>
+                        <h3 data-key="service9">Corporate Law</h3>
+                        <p class="mb-50" data-key="service9-description">Our corporate law services in the UAE are designed to support businesses at every stage of their lifecycle, from incorporation to corporate governance, mergers, and acquisitions. We provide expert legal counsel in structuring and managing businesses to ensure compliance with UAE laws and regulations. Whether you’re starting a new business, restructuring an existing one, or facing complex corporate disputes, our experienced team of corporate lawyers is here to guide you through every legal challenge, ensuring your business operates smoothly and efficiently.</p>
                         <!-- Styled List -->
-                        <h3 class="mt-5">Key areas of our corporate law services include:</h3>
+                        <h3 class="mt-5" data-key="service9-key">Key areas of our corporate law services include:</h3>
                         <ul class="styled-list">
-                            <li>Company Formation: Providing guidance on the legal requirements for starting a business in the UAE, including choosing the appropriate structure (LLC, Free Zone, etc.).</li>
-                            <li>Corporate Governance: Assisting with corporate governance frameworks, ensuring compliance with regulatory requirements and best practices in managing and controlling the company.</li>
-                            <li>Mergers & Acquisitions: Legal support for mergers, acquisitions, joint ventures, and corporate restructuring to maximize value and minimize risks.</li>
-                            <li>Shareholder Agreements: Drafting and advising on shareholder agreements to clarify rights, responsibilities, and dispute resolution mechanisms.</li>
-                            <li>Corporate Compliance: Ensuring businesses meet their ongoing legal obligations, including compliance with financial reporting, regulatory filings, and employment laws.</li>
-                            <li>Corporate Disputes: Representing clients in corporate disputes, including breaches of contract, shareholder conflicts, and board disputes.</li>
+                            <li data-key="service9-item1">Company Formation: Providing guidance on the legal requirements for starting a business in the UAE, including choosing the appropriate structure (LLC, Free Zone, etc.).</li>
+                            <li data-key="service9-item2">Corporate Governance: Assisting with corporate governance frameworks, ensuring compliance with regulatory requirements and best practices in managing and controlling the company.</li>
+                            <li data-key="service9-item3">Mergers & Acquisitions: Legal support for mergers, acquisitions, joint ventures, and corporate restructuring to maximize value and minimize risks.</li>
+                            <li data-key="service9-item4">Shareholder Agreements: Drafting and advising on shareholder agreements to clarify rights, responsibilities, and dispute resolution mechanisms.</li>
+                            <li data-key="service9-item5">Corporate Compliance: Ensuring businesses meet their ongoing legal obligations, including compliance with financial reporting, regulatory filings, and employment laws.</li>
+                            <li data-key="service9-item6">Corporate Disputes: Representing clients in corporate disputes, including breaches of contract, shareholder conflicts, and board disputes.</li>
                         </ul>                                                                         
-                        <h3><br>Our service:</h3>
-                        <p>At Acker Choquette Dray Legal Consultants, we specialize in **corporate law**, offering comprehensive legal services to businesses of all sizes. Whether you need assistance with **company formation**, **corporate governance**, **mergers and acquisitions**, or managing corporate disputes, our expert legal team is here to provide practical and results-oriented solutions. We ensure your business stays compliant with UAE regulations, optimizes its legal structure, and protects its interests in complex transactions and disputes. Let us help you navigate the complexities of corporate law and achieve your business goals.</p>
+                        <h3 data-key="service-title"><br>Our service</h3>
+                        <p data-key="service9-content">At Acker Choquette Dray Legal Consultants, we specialize in **corporate law**, offering comprehensive legal services to businesses of all sizes. Whether you need assistance with **company formation**, **corporate governance**, **mergers and acquisitions**, or managing corporate disputes, our expert legal team is here to provide practical and results-oriented solutions. We ensure your business stays compliant with UAE regulations, optimizes its legal structure, and protects its interests in complex transactions and disputes. Let us help you navigate the complexities of corporate law and achieve your business goals.</p>
                          <!-- Add Contact Button -->
                         <div class="contact mt-4">
-                            <a href="../contact.html" class="contact-btn">
+                            <a href="../contact.html" class="contact-btn" >
                                 Contact Us
-                            </a>
-                            <a href="www.jdavocat.com" class="contact-btn1" data-key="web-visit">
-                                Visit Website
                             </a>
                         </div>
                     </div>
@@ -227,7 +224,7 @@
 
 	<!-- JS here -->
 	
-        <script src="./assets/js/translate.js"> </script>
+        <script src="../assets/js/translate.js"> </script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
