--- a/servises/familly-law.html
+++ b/servises/familly-law.html
@@ -49,9 +49,9 @@
                             <div class="col-xl-2 col-lg-2 col-md-1">
                                 <div class="logo">
                                     <!-- logo-1 -->
-                                    <a href="index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
+                                    <a href="../index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
                                     <!-- logo-2 -->
-                                    <a href="index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
+                                    <a href="../index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8">
@@ -69,9 +69,9 @@
                                             <li class="dropdown">
                                                 <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
                                                 <div class="dropdown-content">
-                                                    <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
-                                                    <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
-                                                    <a href="#" onclick="changeLanguage('ar')"><img src="./assets/img/icon/ar.png" alt="العربية"> Arab</a>
+                                                    <a href="#" onclick="changeLanguage('en')"><img src="../assets/img/icon/uk.png" alt="English"> Eng</a>
+                                                    <a href="#" onclick="changeLanguage('fr')"><img src="../assets/img/icon/fr.png" alt="Français"> Fra</a>
+                                                    <a href="#" onclick="changeLanguage('ar')"><img src="../assets/img/icon/ar.png" alt="العربية"> Arab</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -92,16 +92,16 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess2.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess6.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap pt-100">
-                                <h2>COMPANIES LAW</h2>
+                                <h2 data-key="service8">FAMILY LAW</h2>
                                 <nav aria-label="breadcrumb ">
                                     <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="../services.html">Services</a></li> 
+                                        <li class="breadcrumb-item"><a href="../index.html" data-key="nav-home">Home</a></li>
+                                        <li class="breadcrumb-item"><a href="../services.html" data-key="nav-services">Services</a></li> 
                                     </ol>
                                 </nav>
                             </div>
@@ -118,27 +118,24 @@
                     <div class="col-12">
                         <div class="single-services section-padding2">
                             <div class="details-caption">
-                                <h3>what is Family Law?</h3>
-                                <p class="mb-50">Family Law is the branch of law that deals with legal matters concerning family relationships, such as marriage, divorce, child custody, alimony, and inheritance. It addresses the rights and responsibilities of individuals within family structures, with sensitivity to cultural, religious, and social dynamics.</p>
+                                <h3 data-key="service8">Family Law?</h3>
+                                <p class="mb-50" data-key="service8-description">Family Law is the branch of law that deals with legal matters concerning family relationships, such as marriage, divorce, child custody, alimony, and inheritance. It addresses the rights and responsibilities of individuals within family structures, with sensitivity to cultural, religious, and social dynamics.</p>
                                 <!-- Styled List -->
-                                <h3 class="mt-5">Key areas of company law include:</h3>
+                                <h3 class="mt-5" data-key="service8-key">Key areas of company law include:</h3>
                                 <ul class="styled-list">
-                                    <li>Divorce Proceedings: Legal processes for dissolving marriages and resolving related disputes.</li>
-                                    <li>Child Custody and Visitation: Determining parenting arrangements and visitation rights.</li>
-                                    <li>Alimony and Financial Support: Establishing financial support for spouses and dependents.</li>
-                                    <li>Inheritance and Wills: Drafting and execution of wills and inheritance distribution.</li>
-                                    <li>Adoption and Guardianship: Legal processes for adopting or establishing guardianship of children.</li>
-                                    <li>Marriage Contracts: Legal documentation and agreements for marriage, including prenuptial contracts.</li>
+                                    <li data-key="service8-item1">Divorce Proceedings: Legal processes for dissolving marriages and resolving related disputes.</li>
+                                    <li data-key="service8-item2">Child Custody and Visitation: Determining parenting arrangements and visitation rights.</li>
+                                    <li data-key="service8-item3">Alimony and Financial Support: Establishing financial support for spouses and dependents.</li>
+                                    <li data-key="service8-item4">Inheritance and Wills: Drafting and execution of wills and inheritance distribution.</li>
+                                    <li data-key="service8-item5">Adoption and Guardianship: Legal processes for adopting or establishing guardianship of children.</li>
+                                    <li data-key="service8-item6">Marriage Contracts: Legal documentation and agreements for marriage, including prenuptial contracts.</li>
                                 </ul>                                                                                    
-                                <h3><br>Our service:</h3>
-                                <p>At Acker Choquette Dray Legal Consultants, our expert legal team excels in all aspects of Family Law, providing tailored services for both Muslim and non-Muslim clients. We handle divorce cases and related matters such as alimony, child custody, and visitation, ensuring sensitivity to diverse cultural and legal frameworks. Our services extend to drafting and registering wills for both Muslims and non-Muslims, navigating regulatory complexities to safeguard your legacy. We also offer comprehensive guidance on inheritance and legacy planning, prioritizing our clients' interests and ensuring the seamless resolution of their cases. Trust us to deliver compassionate, professional, and effective representation in safeguarding your family's future.</p>
+                                <h3 data-key="service-title"><br>Our service:</h3>
+                                <p data-key="service8-content">At Acker Choquette Dray Legal Consultants, our expert legal team excels in all aspects of Family Law, providing tailored services for both Muslim and non-Muslim clients. We handle divorce cases and related matters such as alimony, child custody, and visitation, ensuring sensitivity to diverse cultural and legal frameworks. Our services extend to drafting and registering wills for both Muslims and non-Muslims, navigating regulatory complexities to safeguard your legacy. We also offer comprehensive guidance on inheritance and legacy planning, prioritizing our clients' interests and ensuring the seamless resolution of their cases. Trust us to deliver compassionate, professional, and effective representation in safeguarding your family's future.</p>
                                  <!-- Add Contact Button -->
                                 <div class="contact mt-4">
                                     <a href="../contact.html" class="contact-btn">
                                         Contact Us
-                                    </a>
-                                    <a href="www.jdavocat.com" class="contact-btn1" data-key="web-visit">
-                                        Visit Website
                                     </a>
                                 </div>
                             </div>
@@ -226,7 +223,7 @@
 
 	<!-- JS here -->
 	
-        <script src="./assets/js/translate.js"> </script>
+        <script src="../assets/js/translate.js"> </script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
