--- a/servises/intellectual-law.html
+++ b/servises/intellectual-law.html
@@ -49,9 +49,9 @@
                             <div class="col-xl-2 col-lg-2 col-md-1">
                                 <div class="logo">
                                     <!-- logo-1 -->
-                                    <a href="index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
+                                     <a href="../index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
                                     <!-- logo-2 -->
-                                    <a href="index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
+                                    <a href="../index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8">
@@ -69,9 +69,9 @@
                                             <li class="dropdown">
                                                 <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
                                                 <div class="dropdown-content">
-                                                    <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
-                                                    <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
-                                                    <a href="#" onclick="changeLanguage('ar')"><img src="./assets/img/icon/ar.png" alt="العربية"> Arab</a>
+                                                    <a href="#" onclick="changeLanguage('en')"><img src="../assets/img/icon/uk.png" alt="English"> Eng</a>
+                                                    <a href="#" onclick="changeLanguage('fr')"><img src="../assets/img/icon/fr.png" alt="Français"> Fra</a>
+                                                    <a href="#" onclick="changeLanguage('ar')"><img src="../assets/img/icon/ar.png" alt="العربية"> Arab</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -97,11 +97,11 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap pt-100">
-                                <h2>COMPANIES LAW</h2>
+                                <h2 data-key="service2">Intellectual Property Law</h2>
                                 <nav aria-label="breadcrumb ">
                                     <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="../services.html">Services</a></li> 
+                                        <li class="breadcrumb-item"><a href="../index.html" data-key="nav-home">Home</a></li>
+                                        <li class="breadcrumb-item"><a href="../services.html" data-key="nav-services">Services</a></li>  
                                     </ol>
                                 </nav>
                             </div>
@@ -118,26 +118,25 @@
                     <div class="col-12">
                         <div class="single-services section-padding2">
                             <div class="details-caption">
-                                <h3>what is intellectual property Law?</h3>
-                                <p class="mb-50">Intellectual Property (IP) Law protects the rights of creators and businesses over their inventions, designs, brand identities, and creative works. It ensures that these assets are safeguarded against unauthorized use while promoting innovation and fair competition in the marketplace.</p>
+                                <h3 data-key="service2">Intellectual Property Law</h3>
+                                <p class="mb-50" data-key="service2-description">Intellectual Property (IP) Law protects the rights of creators and businesses over their inventions, designs, brand identities, and creative works. It ensures that these assets are safeguarded against unauthorized use while promoting innovation and fair competition in the marketplace.</p>
                                 <!-- Styled List -->
-                                <h3 class="mt-5">Key areas of company law include:</h3>
+                                <h3 class="mt-5" data-key="service2-key">Key areas of company law include:</h3>
                                 <ul class="styled-list">
-                                    <li>Patents: Legal protection for inventions, granting exclusive rights to the inventor.</li>
-                                    <li>Trademarks: Registration and protection of brand names, logos, and symbols that distinguish goods or services.</li>
-                                    <li>Copyrights: Safeguarding original creative works such as art, music, literature, and software.</li>
-                                    <li>Trade Secrets: Ensuring confidentiality of proprietary business information and processes.</li>
-                                    <li>IP Enforcement: Legal actions to prevent infringement and unauthorized use of IP assets.</li>
-                                    <li>International IP Compliance: Navigating IP regulations across global jurisdictions.</li>
+                                    <li data-key="service2-item1">Patents: Legal protection for inventions, granting exclusive rights to the inventor.</li>
+                                    <li data-key="service2-item2">Trademarks: Registration and protection of brand names, logos, and symbols that distinguish goods or services.</li>
+                                    <li data-key="service2-item3">Copyrights: Safeguarding original creative works such as art, music, literature, and software.</li>
+                                    <li data-key="service2-item4">Trade Secrets: Ensuring confidentiality of proprietary business information and processes.</li>
+                                    <li data-key="service2-item5">IP Enforcement: Legal actions to prevent infringement and unauthorized use of IP assets.</li>
+                                    <li data-key="service2-item6">International IP Compliance: Navigating IP regulations across global jurisdictions.</li>
                                 </ul>                                                                          
-                                <h3><br>Our service:</h3>
-                                <p>At Acker Choquette Dray Legal Consultants, we help you protect your innovations and brand identity with our comprehensive intellectual property (IP) and trademark services. Our team assists with securing patents, copyrights, and trademarks, offering tailored strategies to safeguard your assets from infringement in an increasingly competitive global market. Whether it's registering your intellectual property, enforcing your rights, or ensuring compliance with international regulations, we are committed to providing top-tier legal support to protect what makes your business unique. Let us partner with you to secure your creative and commercial success.</p>
+                                <h3 data-key="service-title"><br>Our service</h3>
+                                <p data-key="service2-content">At Acker Choquette Dray Legal Consultants, we help you protect your innovations and brand identity with our comprehensive intellectual property (IP) and trademark services. Our team assists with securing patents, copyrights, and trademarks, offering tailored strategies to safeguard your assets from infringement in an increasingly competitive global market. Whether it's registering your intellectual property, enforcing your rights, or ensuring compliance with international regulations, we are committed to providing top-tier legal support to protect what makes your business unique. Let us partner with you to secure your creative and commercial success.</p>
                                  <!-- Add Contact Button -->
                                 <div class="contact mt-4">
                                     <a href="../contact.html" class="contact-btn">
                                         Contact Us
                                     </a>
-                                     
                                 </div>
                             </div>
                         </div>
