--- a/servises/legal-Imegration.html
+++ b/servises/legal-Imegration.html
@@ -49,9 +49,9 @@
                             <div class="col-xl-2 col-lg-2 col-md-1">
                                 <div class="logo">
                                     <!-- logo-1 -->
-                                    <a href="index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
+                                     <a href="../index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
                                     <!-- logo-2 -->
-                                    <a href="index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
+                                    <a href="../index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8">
@@ -69,9 +69,9 @@
                                             <li class="dropdown">
                                                 <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
                                                 <div class="dropdown-content">
-                                                    <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
-                                                    <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
-                                                    <a href="#" onclick="changeLanguage('ar')"><img src="./assets/img/icon/ar.png" alt="العربية"> Arab</a>
+                                                    <a href="#" onclick="changeLanguage('en')"><img src="../assets/img/icon/uk.png" alt="English"> Eng</a>
+                                                    <a href="#" onclick="changeLanguage('fr')"><img src="../assets/img/icon/fr.png" alt="Français"> Fra</a>
+                                                    <a href="#" onclick="changeLanguage('ar')"><img src="../assets/img/icon/ar.png" alt="العربية"> Arab</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -92,16 +92,16 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess2.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess7.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap pt-100">
-                                <h2>COMPANIES LAW</h2>
+                                <h2 data-key="service4">IMMIGRATION LAW</h2>
                                 <nav aria-label="breadcrumb ">
                                     <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="../services.html">Services</a></li> 
+                                        <li class="breadcrumb-item"><a href="../index.html" data-key="nav-home">Home</a></li>
+                                        <li class="breadcrumb-item"><a href="../services.html" data-key="nav-services">Services</a></li> 
                                     </ol>
                                 </nav>
                             </div>
@@ -118,20 +118,20 @@
                     <div class="col-12">
                         <div class="single-services section-padding2">
                             <div class="details-caption">
-                                <h3>what is Immigration Law?</h3>
-                                <p class="mb-50">Immigration Law governs the legal processes and regulations concerning individuals entering, residing in, and departing from a country. It covers a broad spectrum of issues, including visas, work permits, residency, and citizenship, ensuring compliance with national and international laws.</p>
+                                <h3 data-key="service4">Immigration Law</h3>
+                                <p class="mb-50" data-key="service4-description">Immigration Law governs the legal processes and regulations concerning individuals entering, residing in, and departing from a country. It covers a broad spectrum of issues, including visas, work permits, residency, and citizenship, ensuring compliance with national and international laws.</p>
                                 <!-- Styled List -->
-                                <h3 class="mt-5">Key areas of company law include:</h3>
+                                <h3 class="mt-5" data-key="service4-key">Key areas of company law include:</h3>
                                 <ul class="styled-list">
-                                    <li>Visa Applications: Assisting with tourist, work, student, and family visa processes.</li>
-                                    <li>Residency and Citizenship: Guidance on obtaining permanent residency or citizenship.</li>
-                                    <li>Work Permits: Securing legal authorization for employment in a foreign country.</li>
-                                    <li>Immigration Compliance: Ensuring adherence to immigration laws and avoiding penalties.</li>
-                                    <li>Temporary Relocation: Facilitating short-term stays for business or personal purposes.</li>
-                                    <li>Appeals and Advocacy: Representing clients in immigration-related disputes or rejections.</li>
+                                    <li data-key="service4-item1">Visa Applications: Assisting with tourist, work, student, and family visa processes.</li>
+                                    <li data-key="service4-item2">Residency and Citizenship: Guidance on obtaining permanent residency or citizenship.</li>
+                                    <li data-key="service4-item3">Work Permits: Securing legal authorization for employment in a foreign country.</li>
+                                    <li data-key="service4-item4">Immigration Compliance: Ensuring adherence to immigration laws and avoiding penalties.</li>
+                                    <li data-key="service4-item5">Temporary Relocation: Facilitating short-term stays for business or personal purposes.</li>
+                                    <li data-key="service4-item6">Appeals and Advocacy: Representing clients in immigration-related disputes or rejections.</li>
                                 </ul>                                                                                     
-                                <h3><br>Our service:</h3>
-                                <p>At Acker Choquette Dray Legal Consultants, we specialize in immigration law, providing expert guidance through the complexities of immigration regulations. Whether you're seeking temporary relocation, permanent residency, or assistance with visas and work permits, our experienced team is here to support you every step of the way. We prioritize understanding each client’s unique needs to deliver personalized solutions that align with their immigration goals. With our assistance, you can navigate the legal intricacies of immigration seamlessly and confidently, ensuring compliance while achieving your aspirations.</p>
+                                <h3 data-key="service-title"><br>Our service</h3>
+                                <p data-key="service4-content">At Acker Choquette Dray Legal Consultants, we specialize in immigration law, providing expert guidance through the complexities of immigration regulations. Whether you're seeking temporary relocation, permanent residency, or assistance with visas and work permits, our experienced team is here to support you every step of the way. We prioritize understanding each client’s unique needs to deliver personalized solutions that align with their immigration goals. With our assistance, you can navigate the legal intricacies of immigration seamlessly and confidently, ensuring compliance while achieving your aspirations.</p>
                                  <!-- Add Contact Button -->
                                 <div class="contact mt-4">
                                     <a href="../contact.html" class="contact-btn">
@@ -223,7 +223,7 @@
 
 	<!-- JS here -->
 	
-        <script src="./assets/js/translate.js"> </script>
+        <script src="../assets/js/translate.js"> </script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
