--- a/servises/tax-law.html
+++ b/servises/tax-law.html
@@ -49,9 +49,9 @@
                             <div class="col-xl-2 col-lg-2 col-md-1">
                                 <div class="logo">
                                     <!-- logo-1 -->
-                                    <a href="index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
+                                     <a href="../index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
                                     <!-- logo-2 -->
-                                    <a href="index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
+                                    <a href="../index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8">
@@ -69,9 +69,9 @@
                                             <li class="dropdown">
                                                 <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
                                                 <div class="dropdown-content">
-                                                    <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
-                                                    <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
-                                                    <a href="#" onclick="changeLanguage('ar')"><img src="./assets/img/icon/ar.png" alt="العربية"> Arab</a>
+                                                    <a href="#" onclick="changeLanguage('en')"><img src="../assets/img/icon/uk.png" alt="English"> Eng</a>
+                                                    <a href="#" onclick="changeLanguage('fr')"><img src="../assets/img/icon/fr.png" alt="Français"> Fra</a>
+                                                    <a href="#" onclick="changeLanguage('ar')"><img src="../assets/img/icon/ar.png" alt="العربية"> Arab</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -92,16 +92,16 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess2.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess8.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap pt-100">
-                                <h2>COMPANIES LAW</h2>
+                                <h2>TAX LAW</h2>
                                 <nav aria-label="breadcrumb ">
                                     <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="../services.html">Services</a></li> 
+                                        <li class="breadcrumb-item"><a href="../index.html" data-key="nav-home">Home</a></li>
+                                        <li class="breadcrumb-item"><a href="../services.html" data-key="nav-services">Services</a></li> 
                                     </ol>
                                 </nav>
                             </div>
@@ -118,27 +118,24 @@
             <div class="col-12">
                 <div class="single-services section-padding2">
                     <div class="details-caption">
-                        <h3>Tax Law</h3>
-                        <p class="mb-50">Our law firm in the UAE provides expert tax law services to help businesses navigate the complexities of VAT registration, tax compliance, and financial management. We offer comprehensive support across core operations, accounting, IT, and financial management, ensuring that your company meets all regulatory requirements. Our team of highly qualified and experienced tax lawyers in Dubai, Abu Dhabi, and throughout the UAE specializes in both domestic and cross-border tax issues, including VAT, income tax returns, and more. Clients trust our expertise to manage complex, high-value, and sensitive tax matters, ensuring the best outcomes for their business. Whether you're facing routine tax matters or complex legal challenges, our legal consultants are ready to provide tailored, results-oriented advice.</p>
+                        <h3 data-key="service5">Tax Law</h3>
+                        <p class="mb-50" data-key="service5-description">Our law firm in the UAE provides expert tax law services to help businesses navigate the complexities of VAT registration, tax compliance, and financial management. We offer comprehensive support across core operations, accounting, IT, and financial management, ensuring that your company meets all regulatory requirements. Our team of highly qualified and experienced tax lawyers in Dubai, Abu Dhabi, and throughout the UAE specializes in both domestic and cross-border tax issues, including VAT, income tax returns, and more. Clients trust our expertise to manage complex, high-value, and sensitive tax matters, ensuring the best outcomes for their business. Whether you're facing routine tax matters or complex legal challenges, our legal consultants are ready to provide tailored, results-oriented advice.</p>
                         <!-- Styled List -->
-                        <h3 class="mt-5">Key areas of our tax law services include:</h3>
+                        <h3 class="mt-5" data-key="service5-key">Key areas of our tax law services include:</h3>
                         <ul class="styled-list">
-                            <li>VAT Registration: Assisting businesses with the registration process for VAT compliance in the UAE.</li>
-                            <li>Tax Compliance: Ensuring that businesses adhere to tax laws and regulations, minimizing the risk of penalties.</li>
-                            <li>Income Tax Returns: Providing support in filing and managing income tax returns for businesses and individuals.</li>
-                            <li>Cross-Border Taxation: Offering guidance on international tax issues, including tax treaties and transfer pricing.</li>
-                            <li>Tax Disputes and Litigation: Representing clients in disputes with tax authorities and resolving complex tax issues.</li>
-                            <li>Financial Management: Advising on accounting, financial reporting, and structuring tax-efficient business operations.</li>
+                            <li data-key="service5-item1">VAT Registration: Assisting businesses with the registration process for VAT compliance in the UAE.</li>
+                            <li data-key="service5-item2">Tax Compliance: Ensuring that businesses adhere to tax laws and regulations, minimizing the risk of penalties.</li>
+                            <li data-key="service5-item3">Income Tax Returns: Providing support in filing and managing income tax returns for businesses and individuals.</li>
+                            <li data-key="service5-item4">Cross-Border Taxation: Offering guidance on international tax issues, including tax treaties and transfer pricing.</li>
+                            <li data-key="service5-item5">Tax Disputes and Litigation: Representing clients in disputes with tax authorities and resolving complex tax issues.</li>
+                            <li data-key="service5-item6">Financial Management: Advising on accounting, financial reporting, and structuring tax-efficient business operations.</li>
                         </ul>                                                                         
-                        <h3><br>Our service:</h3>
-                        <p>At Acker Choquette Dray Legal Consultants, we provide expert guidance on all aspects of **tax law** to help businesses navigate the complexities of VAT registration, tax compliance, and cross-border tax issues. Whether you're a local business or an international company operating in the UAE, our team of skilled tax lawyers is here to provide tailored, results-driven advice. We handle everything from routine VAT filings to complex tax disputes, ensuring your business remains compliant and protected from unnecessary risks. Trust our expertise to help you achieve the best possible outcomes in your tax matters.</p>
+                        <h3 data-key="service-title"><br>Our service</h3>
+                        <p data-key="service5-content">At Acker Choquette Dray Legal Consultants, we provide expert guidance on all aspects of **tax law** to help businesses navigate the complexities of VAT registration, tax compliance, and cross-border tax issues. Whether you're a local business or an international company operating in the UAE, our team of skilled tax lawyers is here to provide tailored, results-driven advice. We handle everything from routine VAT filings to complex tax disputes, ensuring your business remains compliant and protected from unnecessary risks. Trust our expertise to help you achieve the best possible outcomes in your tax matters.</p>
                          <!-- Add Contact Button -->
                         <div class="contact mt-4">
                             <a href="../contact.html" class="contact-btn">
                                 Contact Us
-                            </a>
-                            <a href="www.jdavocat.com" class="contact-btn1" data-key="web-visit">
-                                Visit Website
                             </a>
                         </div>
                     </div>
@@ -228,7 +225,7 @@
 
 	<!-- JS here -->
 	
-        <script src="./assets/js/translate.js"> </script>
+        <script src="../assets/js/translate.js"> </script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
