--- a/servises/business-uae.html
+++ b/servises/business-uae.html
@@ -49,9 +49,9 @@
                             <div class="col-xl-2 col-lg-2 col-md-1">
                                 <div class="logo">
                                     <!-- logo-1 -->
-                                    <a href="index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
+                                     <a href="../index.html" class="big-logo"><img src="../assets/img/logo/logo.png" alt=""></a>
                                     <!-- logo-2 -->
-                                    <a href="index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
+                                    <a href="../index.html" class="small-logo"><img class="logo-img" src="../assets/img/logo/loder-logo.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8">
@@ -136,9 +136,6 @@
                         <div class="contact mt-4">
                             <a href="../contact.html" class="contact-btn">
                                 Contact Us
-                            </a>
-                            <a href="https://ackerchoquette.legal/legal-services/business-establishment-in-the-free-zones-of-the-uae/" class="contact-btn1" data-key="web-visit">
-                                Visit Website
                             </a>
                         </div>
                     </div>
